--- a/src/App.xaml
+++ b/src/App.xaml
@@ -2,12 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KarveCar"
-             xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-             xmlns:dockablz="http://dragablz.net/winfx/xaml/dockablz"
              xmlns:lang="clr-namespace:KarveCar.Logic.Generic"
              xmlns:cfg="clr-namespace:KarveCar.ViewModel.ConfiguracionViewModel"
              xmlns:vm="clr-namespace:KarveCar.ViewModel.GenericViewModel"
-             xmlns:ms="clr-namespace:KarveCar.ViewModel.MaestrosViewModel">
+             xmlns:ms="clr-namespace:KarveCar.ViewModel.MaestrosViewModel"
+             xmlns:converter="clr-namespace:KarveCommon.Converter;assembly=KarveCommon">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,9 +23,32 @@
                         <Setter Property="FontFamily" Value="Arial" />
                     </Style>
                     <SolidColorBrush x:Key="WindowBrush" Color="LightGray"/>
+                    <!--Pone el Background en LightGray los TextBox que son sólo lectura-->
+                    <Style x:Key="TextBoxStyle" TargetType="TextBox">
+                        <Style.Triggers>
+                            <Trigger Property="IsReadOnly" Value="True">
+                                <Setter Property="Background" Value="LightGray"/>
+                                <Setter Property="KeyboardNavigation.IsTabStop" Value="False"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
 
+            <!--Converters-->
+            <converter:MultiCommandParameterConverter x:Key="multiCommandParameterConverter"/>
+            <converter:NullByteConverter     x:Key="nullByteConverter"/>
+            <converter:NullDateConverter     x:Key="nullDateConverter"/>
+            <converter:NullDecimalConverter  x:Key="nullDecimalConverter"/>
+            <converter:NullDoubleConverter   x:Key="nullDoubleConverter"/>
+            <converter:NullIntegerConverter  x:Key="nullIntegerConverter"/>
+            <converter:NullLongConverter     x:Key="nullLongConverter"/>
+            <converter:NullShortConverter    x:Key="nullShortConverter"/>
+            <converter:SqlInjectionCodigoConverter    x:Key="sqlInjectionCodigoConverter"/>
+            <converter:SqlInjectionConverter x:Key="sqlInjectionConverter"/>
+            
+            
+            <!--ViewModels-->
             <!-- Generic -->
             <ObjectDataProvider x:Key="ResourceLanguage" 
                                 ObjectType="{x:Type lang:ChangeLanguageLogic}" 
@@ -38,10 +60,13 @@
 
          
             <!-- Maestros-->
-            <ms:MostrarAuxiliaresViewModel x:Key="mostrarAuxiliaresViewModel"/>
             <ms:GrupoVehiculoViewModel     x:Key="grupoVehiculoViewModel"/>
+            <ms:MarcaViewModel             x:Key="marcaViewModel"/>
+            <ms:MarcaDataTableViewModel    x:Key="marcaDataTableViewModel"/>
             <ms:PaymentResolverViewModel   x:Key="paymentResolverViewModel"/>
             <ms:ProvidersResolverViewModel x:Key="providersResolverViewModel"/>
+            <ms:MostrarAuxiliaresViewModel x:Key="mostrarAuxiliaresViewModel"/>
+            
             <!-- Configuracion-->
             <cfg:CintaOpcionesViewModel    x:Key="cintaOpcionesViewModel"/>
         </ResourceDictionary>
